--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          file: schematic_api/Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags || github.event.inputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
