--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -52,4 +52,4 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags || github.event.inputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          labels: ${{ steps.meta.outputs.labels || github.event.inputs.tags}}
