--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -45,11 +45,11 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=semver,pattern={{raw}}
+            type=semver,pattern={{raw}},value=${{ env.TAG || github.event.inputs.tags }}
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           file: Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags || github.event.inputs.tags }}
-          labels: ${{ steps.meta.outputs.labels || github.event.inputs.tags}}
+          tags: ${{ steps.meta.outputs.tags}}
+          labels: ${{ steps.meta.outputs.labels}}
